@@ -1,5 +1,11 @@
 2017-09-18  Richard Biener  <rguenther@suse.de>
 
+	* graphite-scop-detection.c (scop_detection::stmt_has_simple_data_ref):
+	Simplify.
+	(build_alias_set): Reject aliases with no access function.
+
+2017-09-18  Richard Biener  <rguenther@suse.de>
+
 	PR tree-optimization/79622
 	* graphite-scop-detection.c (build_cross_bb_scalars_def): Properly
 	handle PHIs.
